--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
-Django==1.11.6
-gunicorn==19.6.0
-whitenoise==3.2.1
+asgiref==3.4.1
+backports.entry-points-selectable==1.1.1
+distlib==0.3.4
+Django==4.0
+Faker==10.0.0
+filelock==3.4.0
+numpy==1.21.5
+Pillow==9.0.0
+platformdirs==2.4.0
+python-dateutil==2.8.2
+scipy==1.7.3
+six==1.16.0
+sqlparse==0.4.2
+text-unidecode==1.3
+virtualenv==20.10.0
